--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,16 +9,21 @@
 $(function() {
   $(".js-more").on("click", function() {
     var id = $(this).data("id");
-    $.get("/products/" + id + "/description", function(description) {
-      $.get("/products/" + id + "/inventory", function(inventory) {
+    $.getJSON("/products/" + id, function(product) {
         var inventoryText = "<strong>Available</strong>";
-        if(inventory === "false"){
+        debugger
+        if(product.inventory === 0){
           inventoryText = "<strong>Sold Out</strong>";
         }
-        var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>";
+        var descriptionText = "<p>" + product.description + "</p><p>" + inventoryText + "</p>";
+        var orderText = "<h4>Product Orders<br />"
+        product.orders.forEach(function(order){
+            orderText += "<p>ID: " + order.id + "<br />" + "Created At: " + order.created_at + "<br />"
+        })
+        orderText += "</p>"
+        descriptionText += orderText
         $("#product-" + id).html(descriptionText);
       });
-    });
   });
 });
 </script>
